--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,6 @@
   "name": "@uri/typed-api",
   "version": "0.0.7",
   "license": "MIT",
-  "exports": "./mod.ts"
+  "exports": "./mod.ts",
+  "imports": { "zod": "npm:zod@3.22.4" }
 }
